2001-05-29  Alex Samuel  <samuel@codesourcery.com>

	* share/diagnostics/track-help.txt: New file.

2001-05-29  Alex Samuel  <samuel@codesourcery.com>

	* qm/track/issue.py (Issue.GetField): Use field's default if the
	issue doesn't have a value.

2001-05-29  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (make_select): Add form_name parameter.
	* qm/track/web/query.py (QueryPageInfo.__init__): Don't get field
	names. 
	(QueryPageInfo.MakeQueryForm): Add name parameter.
	(QueryPageInfo.GetFieldTypeDescription): Remove.
	(QueryPageInfo.MakePythonQueryHelp): New method.
	(QueryPageInfo.MakeCategorySelect): Likewise.
	(QueryPageInfo.MakeStateSelect): Likewise.
	* qm/track/config.py (__initialize_module): Load help diagnostics.
	* share/dtml/track/query.dtml: Remove help info.  Add browse
	controls. 
	* share/dtml/track/index.dtml: Adjust labels for query.

2001-05-29  Alex Samuel  <samuel@codesourcery.com>

	* qm/fields.py (SetField.GetHtmlHelp): Don't add old help twice.
	* qm/common.py (Enumeral.__cmp__): Check RHS against enumerals for
	strings only.
	* qm/track/issue_class.py (IidField.__init__): copy attributes.
	(DiscussionField): New class.
	* qm/track/issue.py (Issue.MakeDomElement): Compare value as string.
	* qm/track/config.py (setup_idb_for_internal_use): Add discussion
	field.
	* qm/track/triggers/discussion.py: New file.
	* qm/track/web/web.py (HistoryPageInfo.FormatRevisionDiff): Handle
	set fields specially.
	
2001-05-28  Alex Samuel  <samuel@codesourcery.com>

	* doc/manual/test-manual.xml: Mention scheduling across threads
	and hosts.

2001-05-28  Alex Samuel  <samuel@codesourcery.com>

	* doc/manual/manual.xml: Include track-manual.xml.
	* doc/manual/track-manual.xml: New file.
	* doc/manual/test-manual.xml: Adjust.

2001-05-28  Alex Samuel  <samuel@codesourcery.com>

	* qm/graph.py: Add doc string.
	(CycleError): New class.
	(__sort_helper): Handle node missing from edges map.
	(_partition): New function.
	(partition_as_map): Likewise.